--- a/CriarImagemAPartirDeLegenda/CriarImagemAPartirDeLegenda.csproj
+++ b/CriarImagemAPartirDeLegenda/CriarImagemAPartirDeLegenda.csproj
@@ -53,6 +53,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Section.cs" />
+    <Compile Include="Subtitle.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
